gcc/testsuite/gdc.test/runnable/test3574d.d
//int g = 0;
//static ~this() { assert(g == 100); }

void main()
//out
//{
//    g = 100;
//}
//body
{
    //return;
    // expected return code == 0
}
